@@ -25,9 +25,6 @@ TODO, in no particular order :
           print jobs' titles (only appear when printing as raw from
           Winboxes it seems)
 
-        - Ensures that all special characters in strings are properly 
-          escaped when dumping datas : quotes, xml entities, etc...
-        
         - Add date filtering options to dumpykota, something like 
                 date=+20050101 date=-20050201
           to dump all jobs printed between January 1st 2005 included      
